src/test/deca/context/invalid/test_error_3.53-20.deca

// Description:
//    Soulève l'erreur (3.53)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'int' et 'class_A' ne sont pas compatibles avec l'opérateur binaire '+' (règle 3.53)
//
// Historique:
//      cree le 06/01/2022

class A {
    void m() {
    }
} 

{
	boolean i;
    A a;
    i = 1 + a;
}
